# automap_pro

./: .gitattributes  .gitignore  00_START_HERE.md  AGENTS.md  CHANGES_CHECKLIST.md  CODE_ANALYSIS_REPORT.md  COMMIT_MESSAGE.md  COMPILATION_FIX_REPORT.md  COMPREHENSIVE_CHECK.md  COMPREHENSIVE_COORDINATE_DIAGNOSIS.md  DELIVERY_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DIAGNOSIS_REPORT.md  DOCKER_ONELINE_GUIDE.md  ENHANCEMENT_SUMMARY.md  FINAL_ANALYSIS.md  FINAL_COMPLETION_REPORT.md  FINAL_FIX_REPORT.md  FINAL_SOLUTION.md  FINAL_SOLUTION_SUMMARY.md  FIX_DOCUMENTATION.md  FIX_PATH_ISSUE.md  FIX_REPORT.md  GLOBAL_MAP_FIX_PLAN_D.md  GPS_LOOP_OPTIMIZATION.md  GPS_ODOM_ENHANCEMENT.md  High-Precision-Automated-Point-Cloud-Mapping-System-Architecture.md  LIDAR_PERFORMANCE_GUIDE.md  LIDAR_REALTIME_OPTIMIZATION.md  LOOP_CLOSURE_ENHANCEMENT_SUMMARY.md  LOOP_CLOSURE_QUICK_REFERENCE.md  MAPPING_ANALYSIS_REPORT.md  OVERLAP_TRANSFORMER_DEEP_ANALYSIS.md  P1_FIX_COMPLETION.md  P1_P2_P3_FIX_SUMMARY.md  PLAN_D_COMPLETION_SUMMARY.md  QUICKSTART.md  QUICKSTART_MAPPING.md  QUICKSTART_ONELINE.md  QUICK_ACTION_GUIDE.md  (+63 more)
HBA-main/HBA_ROS2/: CMakeLists.txt
HBA-main/HBA_ROS2/include/: mypcl.hpp  tools.hpp  voxel.hpp
HBA-main/HBA_ROS2/launch/: cal_MME_launch.py  hba_launch.py  visualize_launch.py
HBA-main/HBA_ROS2/src/: calculate_MME.cpp  visualize.cpp
TEASER-plusplus-master/test/teaser/: CMakeLists.txt
automap_pro/: CMakeLists.txt  MVP_DELIVERY.md  MVP_IMPLEMENTATION_PROGRESS.md  Makefile  README.md  README_ROBUSTNESS.md  package.xml
automap_pro/action/: RunHBA.action
automap_pro/config/: fast_livo2_config.yaml  gps_config.yaml  hba_config.yaml  logging.yaml  loop_closure_vegetation_override.yaml  ms_mapping_config.yaml  system_config.yaml  system_config_M2DGR.yaml  system_config_nya02.yaml
automap_pro/config/sensor_config/: gps_imu_extrinsic.yaml  lidar_imu_extrinsic.yaml
automap_pro/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
automap_pro/docs/: BACKEND_BEFORE_HBA_AND_DOUBLE_FREE.md  BACKEND_COORDINATE_CONSISTENCY.md  BACKEND_LOGIC_AND_COORDINATE_ANALYSIS.md  CONFIG_M2DGR_BLUR_OPTIMIZATION.md  CONFIG_PARAM_MAPPING.md  CRASH_ANALYSIS_AND_HARDENING.md  DATA_FLOW_ANALYSIS.md  DEBUG_WITH_GDB.md  FAST_LIVO_POINT_CLOUD_CLARITY.md  FIX_GPS_BATCH_SIGSEGV_20260310.md  FIX_GTSAM_LAGO_STATIC_INIT_DOUBLE_FREE.md  FIX_ISAM2_FIRST_UPDATE_DOUBLE_FREE_20260311.md  FIX_ISAM2_FIRST_UPDATE_DOUBLE_FREE_V2_20260312.md  GLOBAL_MAP_BLUR_ANALYSIS.md  GLOBAL_MAP_DIAGNOSIS.md  GLOBAL_MAP_MESSY_ANALYSIS.md  GPS_ALIGN_BACKEND_POSE_REFRESH_ANALYSIS.md  GPS_ASYNC_AND_ACCURACY.md  GTSAM_CRASH_LOGGING_AND_CONSTRAINTS_20260312.md  GTSAM_DOUBLE_FREE_CRASH_REPORT.md  GTSAM_MULTI_USE_AND_LOGGING.md  HBA_AND_LOOP_DESIGN.md  HBA_CONSTRAINTS_AND_BACKEND_ORDER.md  HBA_GTSAM_FALLBACK_DOUBLE_FREE_FIX.md  ISOLATE_ISAM2_AND_HBA.md  LOGGING_AND_DIAGNOSIS.md  LOG_ANALYSIS_RUN_20260310_151141.md  MAP_FRAME_CONFIG.md  PRECISION_LOGGING.md  TEASER_CRASH_ANALYSIS.md  TEASER_CRASH_FIX.md  TEASER_ROBUST_FIX_ENTERPRISE.md  TRAJECTORY_LOG_AND_PLOT.md  TROUBLESHOOTING.md  V3_BARRIER_AND_META_CONTRACTS.md  VERIFICATION_MAPPING_LOG.md  config_check_report_M2DGR.md  v3_stability_baseline.md
automap_pro/launch/: automap_composable.launch.py  automap_incremental.launch.py  automap_offline.launch.py  automap_online.launch.py  automap_v1_enhanced.launch.py  params_from_system_config.py  run_under_gdb.sh  rviz_utils.py  visualization.launch.py
automap_pro/logs/: fast_livo_params.yaml
automap_pro/msg/: CrossSessionConstraint.msg  GPSMeasurementMsg.msg  KeyFrameInfoMsg.msg  KeyFrameMsg.msg  LoopConstraintMsg.msg  MappingStatusMsg.msg  SessionInfo.msg  SessionList.msg  SubMapEventMsg.msg
automap_pro/rviz/: automap.rviz  automap_backend.rviz  automap_backend_keyframes_only.rviz  automap_frontend.rviz
automap_pro/scripts/: analyze_logs.py  check_v3_stability_baseline.sh  ci_v3_gate.sh  convert_ot_pth_to_torchscript.py  evaluate_map.py  evaluate_trajectory.py  inspect_lsk3dnet_checkpoint.py  merge_sessions.py  plot_accuracy_curves.py  plot_trajectory_compare.py  verify_lsk3dnet_hybrid_classifier.py  verify_robustness_mvp.sh  verify_system_config_launch.sh  visualize_results.py
automap_pro/src/backend/: delayed_gps_compensator.cpp  factor_types.cpp  global_coord_manager.cpp  gps_factor_noise_util.cpp  gtsam_guard.cpp  hba_bridge.cpp  hba_optimizer.cpp  hba_wrapper.cpp  incremental_optimizer.cpp  isam2_constraint_validation.cpp  isam2_gps_manager.cpp  isam2_task_queue.cpp  load_trace.cpp  optimizer.cpp  pose_graph.cpp  unified_task_queue.cpp
automap_pro/src/config/: thread_config.cpp
automap_pro/src/core/: alert_system.cpp  config_manager.cpp  crash_report.cpp  diagnostics_service.cpp  error_code.cpp  error_handler.cpp  error_monitor.cpp  health_monitor.cpp  health_monitor_impl.cpp  landmark_id.cpp  load_trace.cpp  logger.cpp  map_frame_config.cpp  ort_wrapper.cpp  performance_monitor.cpp  utils.cpp  validator.cpp
automap_pro/src/frontend/: fast_livo2_adapter.cpp  fast_livo2_wrapper.cpp  gps_fusion.cpp  gps_manager.cpp  keyframe_manager.cpp  livo_bridge.cpp
automap_pro/src/loop_closure/: fpfh_extractor.cpp  icp_refiner.cpp  loop_detector.cpp  overlap_transformer.cpp  overlap_transformer_infer.cpp  teaser_matcher.cpp
automap_pro/src/map/: global_map.cpp  map_builder.cpp  map_exporter.cpp  map_filter.cpp
automap_pro/src/modular/: README.md
automap_pro/src/nodes/: automap_system_node.cpp  fast_livo2_node.cpp  loop_detector_node.cpp  map_builder_node.cpp  optimizer_node.cpp  sensor_sync_node.cpp  submap_manager_node.cpp
automap_pro/src/sensor/: attitude_estimator.cpp  camera_processor.cpp  gps_processor.cpp  imu_processor.cpp  lidar_processor.cpp  (+2 more)
automap_pro/srv/: CreateSession.srv  DeleteSession.srv  GetSessionInfo.srv  GetStatus.srv  LoadSession.srv  MergeSessions.srv  SaveMap.srv  TriggerHBA.srv  TriggerOptimize.srv
automap_pro/test/: test_attitude_estimator.cpp  test_data_types.cpp  test_delayed_gps_compensator.cpp  test_gps_fusion.cpp  test_loop_closure.cpp  test_robustness_framework.cpp  v3_pose_chain_test.cpp
(+1258 files in other folders)
